# google-calendar-mcp

./: Dockerfile  Makefile  README.md  docker-compose.yml  main.py  pyproject.toml
src/: __init__.py  response.py  schemas.py  settings.py
src/auth/: oauth.py  token_manager.py
src/google/: client.py  tools.py
src/mcp_server/: server.py
src/nlp/: router.py  service.py
